--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -1,5 +1,5 @@
 .cart {
-    margin:8em 1em 0 1em
+    margin:8em 1em 0 1em;
 }
 
 .cart h3{
@@ -16,7 +16,7 @@
   }
   
   .cartForm {
-      margin:0 1em 0 1em
+      margin:0 1em 0 1em;
   }
 
   
